tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer_transactions-bob-token-balances.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: token_balances
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "token_balances": [
      {
        "mint": "2U35cKS3Cj2xs5EBdByXYU7LaKAitqjSZc1Jnvu4iPf4",
        "balance": 105
      }
    ],
    "cursor": null
  }
}
