tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer_transactions-bob-validity-proof-v2.snap
---
source: tests/integration_tests/e2e_tests.rs
assertion_line: 212
expression: validity_proof_v2
---
{
  "value": {
    "compressedProof": {
      "a": [],
      "b": [],
      "c": []
    },
    "roots": [
      "2wBDKLscN4SBNzNdVsHq17PVXycvM8n4LNiKzJrebqZ7",
      "2wBDKLscN4SBNzNdVsHq17PVXycvM8n4LNiKzJrebqZ7"
    ],
    "rootIndices": [
      {
        "rootIndex": 7,
        "proveByIndex": false
      },
      {
        "rootIndex": 7,
        "proveByIndex": false
      }
    ],
    "leafIndices": [
      6,
      3
    ],
    "leaves": [
      "JReC6h68m3EdCKP7S35e7BE4pBPwQz1HfjUkboeQy9r",
      "2R46QL8CSripTWvEsESL39ccripkjs9MjGtwnbJMzJET"
    ],
    "merkleContext": [
      {
        "treeType": 1,
        "tree": "smt1NamzXdq4AMqS2fS2F1i5KTYPZRhoHgWx38d8WsT",
        "queue": "nfq1NvQDJ2GEgnS8zt9prAe8rjjpAW1zFkrvZoBR148",
        "cpiContext": null,
        "nextContext": null
      },
      {
        "treeType": 1,
        "tree": "smt1NamzXdq4AMqS2fS2F1i5KTYPZRhoHgWx38d8WsT",
        "queue": "nfq1NvQDJ2GEgnS8zt9prAe8rjjpAW1zFkrvZoBR148",
        "cpiContext": null,
        "nextContext": null
      }
    ]
  },
  "context": {
    "slot": 0
  }
}
