tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer_transactions-bob-validity-proof.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: validity_proof
---
{
  "value": {
    "compressedProof": {
      "a": [],
      "b": [],
      "c": []
    },
    "roots": [
      "2wBDKLscN4SBNzNdVsHq17PVXycvM8n4LNiKzJrebqZ7",
      "2wBDKLscN4SBNzNdVsHq17PVXycvM8n4LNiKzJrebqZ7"
    ],
    "rootIndices": [
      7,
      7
    ],
    "leafIndices": [
      6,
      3
    ],
    "leaves": [
      "JReC6h68m3EdCKP7S35e7BE4pBPwQz1HfjUkboeQy9r",
      "2R46QL8CSripTWvEsESL39ccripkjs9MjGtwnbJMzJET"
    ],
    "merkleTrees": [
      "smt1NamzXdq4AMqS2fS2F1i5KTYPZRhoHgWx38d8WsT",
      "smt1NamzXdq4AMqS2fS2F1i5KTYPZRhoHgWx38d8WsT"
    ]
  },
  "context": {
    "slot": 0
  }
}
